--- a/services/sms-srv/.env.prod
+++ b/services/sms-srv/.env.prod
@@ -6,10 +6,9 @@ PORT = 8080
 
 # OPTIONS
 
-SMS_USER = pyatakov.viktor@gmail.com
-SMS_API = gate.smsaero.ru/v2/sms
-SMS_KEY = K7RBIOeVy2sERquPLc2mOgYHdRZc
-SMS_SIGN = osetpr.ru
+TOKEN = 3645cdfd995c5ef067b8d885705c0946
+DEVICE = active
+HOST = https://semysms.net/api/3/sms.php
 
 
 #SERVICES
@@ -24,6 +23,4 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 #RABBIT QUEUE
 
-QUEUE_SMS_ORDER_CREATE = SMS_SRV.order.create
-QUEUE_SMS_ORDER_UPDATE = SMS_SRV.order.update
-
+QUEUE_SEMYSMS_SEND = SMS_SRV.semysms.send
