--- a/services/order-srv/.env.prod
+++ b/services/order-srv/.env.prod
@@ -24,8 +24,9 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 QUEUE_MAIL_ORDER_CREATE = MAIL_SRV.order.create
 QUEUE_MAIL_ORDER_UPDATE = MAIL_SRV.order.update
 
-QUEUE_PUSH_ORDER_UPDATE = PUSH_SRV.order.update
 QUEUE_PUSH_SEND = PUSH_SRV.push.send
+
+QUEUE_SEMYSMS_SEND = SMS_SRV.semysms.send
 
 
 #RABBIT EXCHANGE
