--- a/services/sms-srv/.env
+++ b/services/sms-srv/.env
@@ -6,10 +6,9 @@ PORT = 5021
 
 # OPTIONS
 
-SMS_USER = pyatakov.viktor@gmail.com
-SMS_HOST = gate.smsaero.ru
-SMS_KEY = K7RBIOeVy2sERquPLc2mOgYHdRZc
-SMS_SIGN = osetpr.ru
+TOKEN = 3645cdfd995c5ef067b8d885705c0946
+DEVICE = active
+HOST = https://semysms.net/api/3/sms.php
 
 
 #SERVICES
@@ -24,4 +23,4 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 #RABBIT QUEUE
 
-QUEUE_SMS_SEND = SMS_SRV.sms.send
+QUEUE_SEMYSMS_SEND = SMS_SRV.semysms.send
