--- a/gateway/admin-gw/.env
+++ b/gateway/admin-gw/.env
@@ -26,6 +26,7 @@ ORDER_API_SRV = http://localhost:5000/api/v1
 PRODUCT_API_SRV = http://localhost:5010/api/v1
 GALLERY_API_SRV = http://localhost:5030/api/v1
 PLAN_API_SRV = http://localhost:5080/api/v1
+PUSH_API_SRV = http://localhost:5022/api/v1
 COMMENT_API_SRV = http://localhost:5070/api/v1
 
 
