--- a/services/order-srv/.env
+++ b/services/order-srv/.env
@@ -7,6 +7,7 @@ PORT = 5000
 # SERVICES
 
 CUSTOMER_API_SRV = http://localhost:5060/api/v1
+IDENTITY_API_SRV = http://localhost:5050/api/v1
 
 
 # DATABASE CONNECTION
