--- a/services/order-srv/.env.stage
+++ b/services/order-srv/.env.stage
@@ -7,6 +7,7 @@ PORT = 8080
 # SERVICES
 
 CUSTOMER_API_SRV = http://customer_srv:8080/api/v1
+IDENTITY_API_SRV = http://identity_srv:8080/api/v1
 
 
 # DATABASE CONNECTION
