--- a/services/sms-srv/.env
+++ b/services/sms-srv/.env
@@ -7,7 +7,7 @@ PORT = 5021
 # OPTIONS
 
 TOKEN = 3645cdfd995c5ef067b8d885705c0946
-DEVICE = active
+DEVICE = 302204
 HOST = https://semysms.net/api/3/sms.php
 
 
