--- a/services/customer-srv/.env.stage
+++ b/services/customer-srv/.env.stage
@@ -14,4 +14,5 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 #RABBIT EXCHANGE
 
+EXCHANGE_CUSTOMER_CREATE = CUSTOMER_SRV.customer.create
 EXCHANGE_CUSTOMER_UPDATE = CUSTOMER_SRV.customer.update
