--- a/services/order-srv/.env
+++ b/services/order-srv/.env
@@ -22,6 +22,9 @@ RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
 
 #RABBIT QUEUE
 
+QUEUE_CUSTOMER_CREATE = ORDER_SRV.customer.create
+QUEUE_CUSTOMER_UPDATE = ORDER_SRV.customer.update
+
 QUEUE_MAIL_ORDER_CREATE = MAIL_SRV.order.create
 QUEUE_MAIL_ORDER_UPDATE = MAIL_SRV.order.update
 
@@ -35,4 +38,7 @@ QUEUE_SEMYSMS_SEND = SMS_SRV.semysms.send
 EXCHANGE_ORDER_CREATE = ORDER_SRV.order.create
 EXCHANGE_ORDER_UPDATE = ORDER_SRV.order.update
 EXCHANGE_ORDER_DELETE = ORDER_SRV.order.delete
+
+EXCHANGE_CUSTOMER_CREATE = CUSTOMER_SRV.customer.create
+EXCHANGE_CUSTOMER_UPDATE = CUSTOMER_SRV.customer.update
 
