--- a/services/sms-srv/.env.prod
+++ b/services/sms-srv/.env.prod
@@ -7,7 +7,7 @@ PORT = 8080
 # OPTIONS
 
 TOKEN = 3645cdfd995c5ef067b8d885705c0946
-DEVICE = active
+DEVICE = 302441
 HOST = https://semysms.net/api/3/sms.php
 
 
