--- a/nginx/conf.prod.d/client.conf
+++ b/nginx/conf.prod.d/client.conf
@@ -8,7 +8,7 @@ upstream mobile {
 }
 
 map $http_user_agent $webroot {
-    ~*(iPhone|iPod|incognito|webmate|Android|dream|CUPCAKE|froyo|BlackBerry|webOS|s8000|bada|IEMobile|Googlebot\-Mobile|AdsBot\-Google)  client;
+    ~*(iPhone|iPod|incognito|webmate|Android|dream|CUPCAKE|froyo|BlackBerry|webOS|s8000|bada|IEMobile|Googlebot\-Mobile|AdsBot\-Google)  mobile_ui;
     default  client;
 }
 
