--- a/clients/mobile-ui/public/manifest.json
+++ b/clients/mobile-ui/public/manifest.json
@@ -21,10 +21,15 @@
       "src": "/icon-96.png",
       "type": "image/png",
       "sizes": "96x96"
+    },
+    {
+      "src": "/icon-144.png",
+      "type": "image/png",
+      "sizes": "144x144"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#333333"
 }
