--- a/ui.packages/mobile-dialog/package.json
+++ b/ui.packages/mobile-dialog/package.json
@@ -16,7 +16,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
-    "redux": "4.1.2"
+    "redux": "4.1.2",
+    "react-transition-group": "4.4.2"
   },
   "devDependencies": {
     "@babel/cli": "7.16.0",
