--- a/services/comment-srv/.env
+++ b/services/comment-srv/.env
@@ -12,3 +12,16 @@ DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@localhost:5432/osetpr-comment
 # RABBIT CONNECTION
 
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@localhost:5672
+
+
+#RABBIT QUEUE
+
+QUEUE_CUSTOMER_CREATE = ORDER_SRV.customer.create
+QUEUE_CUSTOMER_UPDATE = ORDER_SRV.customer.update
+
+
+#RABBIT EXCHANGE
+
+EXCHANGE_CUSTOMER_CREATE = CUSTOMER_SRV.customer.create
+EXCHANGE_CUSTOMER_UPDATE = CUSTOMER_SRV.customer.update
+
