--- a/services/comment-srv/.env.stage
+++ b/services/comment-srv/.env.stage
@@ -14,11 +14,13 @@ DB_CONNECTION_HOST = postgres://admin:1Ctdfcnjgjkm@db:5432/comment_srv
 RABBIT_CONNECTION_HOST = amqp://admin:1Ctdfcnjgjkm@rabbit:5672
 
 
-# EVENT
+#RABBIT QUEUE
 
-EVENT_IMAGE_DELETE = GALLERY_SRV.image.delete
+QUEUE_CUSTOMER_CREATE = ORDER_SRV.customer.create
+QUEUE_CUSTOMER_UPDATE = ORDER_SRV.customer.update
 
 
-# EXCHANGE
+#RABBIT EXCHANGE
 
-EXCHANGE_IMAGE_UPDATE = GALLERY_SRV.image.update
+EXCHANGE_CUSTOMER_CREATE = CUSTOMER_SRV.customer.create
+EXCHANGE_CUSTOMER_UPDATE = CUSTOMER_SRV.customer.update
