--- a/modules/client/client-main/package.json
+++ b/modules/client/client-main/package.json
@@ -13,7 +13,7 @@
     "@reduxjs/toolkit": "1.5.0",
     "@ui.packages/utils": "1.0.0",
     "@ui.packages/client-kit": "1.0.0",
-    "@ui.packages/dialog": "1.0.0",
+    "@ui.packages/client-dialog": "1.0.0",
     "@ui.packages/hoc": "1.0.0",
     "@ui.packages/notifications": "1.0.0",
     "@ui.packages/request": "1.0.0",
