--- a/modules/client/client-order/package.json
+++ b/modules/client/client-order/package.json
@@ -12,7 +12,7 @@
     "@packages/errors": "1.0.0",
     "@reduxjs/toolkit": "1.5.0",
     "@ui.packages/client-kit": "1.0.0",
-    "@ui.packages/dialog": "1.0.0",
+    "@ui.packages/client-dialog": "1.0.0",
     "@ui.packages/hoc": "1.0.0",
     "@ui.packages/notifications": "1.0.0",
     "@ui.packages/request": "1.0.0",
