--- a/ui.packages/client-dialog/package.json
+++ b/ui.packages/client-dialog/package.json
@@ -1,32 +1,24 @@
 {
   "private": true,
-  "name": "@modules/client-dev",
+  "name": "@ui.packages/client-dialog",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production babel src --out-dir ./lib --copy-files",
-    "start:dev": "cross-env NODE_ENV=development babel src --out-dir ./lib --copy-files --watch"
+    "build": "cross-env NODE_ENV=production babel ./src --out-dir ./lib --copy-files",
+    "start:dev": "cross-env NODE_ENV=development babel ./src --out-dir ./lib --copy-files --watch"
   },
   "dependencies": {
-    "@packages/errors": "1.0.0",
     "@reduxjs/toolkit": "1.5.0",
     "@ui.packages/client-kit": "1.0.0",
-    "@ui.packages/client-dialog": "1.0.0",
-    "@ui.packages/hoc": "1.0.0",
-    "@ui.packages/notifications": "1.0.0",
-    "@ui.packages/request": "1.0.0",
-    "@ui.packages/socket": "1.0.0",
-    "@ui.packages/table": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
     "@ui.packages/types": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-redux": "7.2.6",
-    "react-router-dom": "6.0.0-beta.8",
-    "redux": "4.1.2",
-    "redux-form": "8.3.7"
+    "redux": "4.1.2"
   },
   "devDependencies": {
     "@babel/cli": "7.16.0",
