--- a/clients/client-ui/package.json
+++ b/clients/client-ui/package.json
@@ -13,7 +13,7 @@
     "@modules/client-order": "1.0.0",
     "@ui.packages/admin-kit": "1.0.0",
     "@ui.packages/application": "1.0.0",
-    "@ui.packages/dialog": "1.0.0",
+    "@ui.packages/client-dialog": "1.0.0",
     "@ui.packages/notifications": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
     "@ui.packages/client-kit": "1.0.0",
