--- a/modules/client/client-main/package.json
+++ b/modules/client/client-main/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@packages/errors": "1.0.0",
     "@reduxjs/toolkit": "1.5.0",
-    "@ui.packages/utils": "1.0.0",
     "@ui.packages/client-kit": "1.0.0",
     "@ui.packages/client-dialog": "1.0.0",
+    "@ui.packages/client-notifications": "1.0.0",
     "@ui.packages/hoc": "1.0.0",
-    "@ui.packages/notifications": "1.0.0",
-    "@ui.packages/request": "1.0.0",
+    "@ui.packages/utils": "1.0.0",
     "@ui.packages/socket": "1.0.0",
     "@ui.packages/table": "1.0.0",
+    "@ui.packages/request": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
     "@ui.packages/types": "1.0.0",
     "@ui.packages/order": "1.0.0",
