--- a/clients/client-ui/package.json
+++ b/clients/client-ui/package.json
@@ -11,12 +11,11 @@
     "@modules/client-dev": "1.0.0",
     "@modules/client-main": "1.0.0",
     "@modules/client-order": "1.0.0",
-    "@ui.packages/admin-kit": "1.0.0",
-    "@ui.packages/application": "1.0.0",
-    "@ui.packages/client-dialog": "1.0.0",
-    "@ui.packages/notifications": "1.0.0",
-    "@ui.packages/theme-2": "1.0.0",
     "@ui.packages/client-kit": "1.0.0",
+    "@ui.packages/client-dialog": "1.0.0",
+    "@ui.packages/client-application": "1.0.0",
+    "@ui.packages/client-notifications": "1.0.0",
+    "@ui.packages/theme-2": "1.0.0",
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
