--- a/ui.packages/client-application/package.json
+++ b/ui.packages/client-application/package.json
@@ -1,32 +1,25 @@
 {
   "private": true,
-  "name": "@modules/client-order",
+  "name": "@ui.packages/client-application",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production babel src --out-dir ./lib --copy-files",
-    "start:dev": "cross-env NODE_ENV=development babel src --out-dir ./lib --copy-files --watch"
+    "build": "cross-env NODE_ENV=production babel ./src --out-dir ./lib --copy-files",
+    "start:dev": "cross-env NODE_ENV=development babel ./src --out-dir ./lib --copy-files --watch"
   },
   "dependencies": {
     "@packages/errors": "1.0.0",
     "@reduxjs/toolkit": "1.5.0",
-    "@ui.packages/client-kit": "1.0.0",
-    "@ui.packages/client-dialog": "1.0.0",
     "@ui.packages/client-notifications": "1.0.0",
-    "@ui.packages/hoc": "1.0.0",
     "@ui.packages/request": "1.0.0",
     "@ui.packages/socket": "1.0.0",
-    "@ui.packages/table": "1.0.0",
-    "@ui.packages/theme": "1.0.0",
-    "@ui.packages/types": "1.0.0",
-    "classnames": "2.3.1",
-    "prop-types": "15.7.2",
+    "history": "5.1.0",
     "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-redux": "7.2.6",
     "react-router-dom": "6.0.0-beta.8",
-    "redux": "4.1.2",
-    "redux-form": "8.3.7"
+    "redux-thunk": "2.4.0"
   },
   "devDependencies": {
     "@babel/cli": "7.16.0",
