--- a/ui.packages/admin-kit/package.json
+++ b/ui.packages/admin-kit/package.json
@@ -17,17 +17,17 @@
     "@ui.packages/theme": "1.0.0",
     "@ui.packages/types": "1.0.0",
     "@ui.packages/utils": "1.0.0",
-    "array-move": "4.0.0"
+    "array-move": "4.0.0",
+    "react-sortable-hoc": "2.0.0",
+    "react-input-mask": "3.0.0-alpha.2",
+    "react-dadata": "2.13.0"
   },
   "peerDependencies": {
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-dadata": "2.13.0",
     "react-dom": "17.0.2",
-    "react-input-mask": "3.0.0-alpha.2",
-    "react-router-dom": "6.0.0-beta.8",
-    "react-sortable-hoc": "2.0.0"
+    "react-router-dom": "6.0.0-beta.8"
   },
   "devDependencies": {
     "@babel/cli": "7.16.0",
