--- a/ui.packages/mobile-kit/package.json
+++ b/ui.packages/mobile-kit/package.json
@@ -14,14 +14,16 @@
     "@ui.packages/order": "1.0.0",
     "@ui.packages/request": "1.0.0",
     "@ui.packages/theme-2": "1.0.0",
+    "react-input-mask": "3.0.0-alpha.2"
+  },
+  "peerDependencies": {
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "redux-form": "8.3.7",
     "react-dom": "17.0.2",
-    "react-input-mask": "3.0.0-alpha.2",
     "react-redux": "7.2.6",
-    "react-router-dom": "6.0.0-beta.8",
-    "redux-form": "8.3.7"
+    "react-router-dom": "6.0.0-beta.8"
   },
   "devDependencies": {
     "@babel/cli": "7.16.0",
