--- a/clients/client-ui/package.json
+++ b/clients/client-ui/package.json
@@ -11,6 +11,7 @@
     "@modules/client-main": "1.0.0",
     "@modules/client-order": "1.0.0",
     "@modules/client-about": "1.0.0",
+    "@modules/client-profile": "1.0.0",
     "@modules/client-comments": "1.0.0",
     "@ui.packages/client-kit": "1.0.0",
     "@ui.packages/client-dialog": "1.0.0",
