--- a/modules/client/order/package.json
+++ b/modules/client/order/package.json
@@ -16,9 +16,7 @@
     "@ui.packages/hoc": "1.0.0",
     "@ui.packages/request": "1.0.0",
     "@ui.packages/socket": "1.0.0",
-    "@ui.packages/table": "1.0.0",
-    "@ui.packages/theme": "1.0.0",
-    "@ui.packages/types": "1.0.0"
+    "@ui.packages/theme-2": "1.0.0"
   },
   "peerDependencies": {
     "@reduxjs/toolkit": "^1.5.0",
