--- a/modules/admin/products/package.json
+++ b/modules/admin/products/package.json
@@ -14,6 +14,7 @@
     "@ui.packages/admin-kit": "1.0.0",
     "@ui.packages/admin-dialog": "1.0.0",
     "@ui.packages/hoc": "1.0.0",
+    "@ui.packages/utils": "1.0.0",
     "@ui.packages/admin-notifications": "1.0.0",
     "@ui.packages/request": "1.0.0",
     "@ui.packages/socket": "1.0.0",
