--- a/.github/workflows/dev.client-ui.yml
+++ b/.github/workflows/dev.client-ui.yml
@@ -1,21 +1,15 @@
-name: Dev client-ui
+
+name: dev_client_ui
 
 on:
-  pull_request:
-    branches:
-      - '*'
   push:
     branches:
       - 'development'
 
 jobs:
-  build:
+  dev_build:
     runs-on: ubuntu-18.04
+
     steps:
-      - uses: actions/checkout@v1
-      - name: set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.11
-      - name: Maven Package
-        run: mvn -B clean package -DskipTests
+    - name:  Clone git repo
+      uses: actions/checkout@v1
