--- a/clients/mobile-ui/public/manifest.json
+++ b/clients/mobile-ui/public/manifest.json
@@ -1,34 +1,14 @@
 {
-  "short_name": "Пекарня",
-  "name": "Пекарня \"Осетинские пироги\"",
+  "short_name": "Осетинская кухня",
+  "name": "Осетинская кухня",
   "icons": [
     {
-      "src": "/icon-16.png",
-      "type": "image/png",
-      "sizes": "16x16"
-    },
-    {
-      "src": "/icon-32.png",
-      "type": "image/png",
-      "sizes": "32x32"
-    },
-    {
-      "src": "/icon-48.png",
-      "type": "image/png",
-      "sizes": "48x48"
-    },
-    {
-      "src": "/icon-96.png",
-      "type": "image/png",
-      "sizes": "96x96"
-    },
-    {
-      "src": "/icon-144.png",
-      "type": "image/png",
+      "src": "/favicon.svg",
+      "type": "image/svg+xml",
       "sizes": "144x144"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#333333"
