--- a/nginx/conf.prod.d/client.conf
+++ b/nginx/conf.prod.d/client.conf
@@ -13,6 +13,11 @@ map $http_user_agent $webroot {
 }
 
 server {
+    server_name www.osetpr.ru;
+    return 301 $scheme://osetpr.ru$request_uri;
+}
+
+server {
     listen 80;
     server_name osetpr.ru;
 
