--- a/clients/client-ui/.env
+++ b/clients/client-ui/.env
@@ -17,7 +17,7 @@ REACT_APP_API_HOST = http://localhost:4000
 
 REACT_APP_TAKE = 12
 
-REACT_APP_WEBSITE_NAME = "Осетинские пироги"
+REACT_APP_WEBSITE_NAME = "Осетинская кухня"
 
 
 # SOCKET
