--- a/clients/client-ui/.env.stage
+++ b/clients/client-ui/.env.stage
@@ -9,7 +9,7 @@ REACT_APP_API_HOST = https://stage.osetpr.ru/api
 
 REACT_APP_TAKE = 12
 
-REACT_APP_WEBSITE_NAME = "Осетинские пироги"
+REACT_APP_WEBSITE_NAME = "Осетинская кухня"
 
 
 # SOCKET
