--- a/nginx/conf.prod.d/client.conf
+++ b/nginx/conf.prod.d/client.conf
@@ -19,7 +19,7 @@ server {
 
 server {
     listen 80;
-    server_name osetpr.ru;
+    server_name www.osetpr.ru osetpr.ru;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -33,7 +33,7 @@ server {
 server {
     listen 443 ssl;
 
-    server_name osetpr.ru;
+    server_name www.osetpr.ru osetpr.ru;
 
     ssl_certificate /etc/letsencrypt/live/osetpr.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/osetpr.ru/privkey.pem;
