--- a/clients/client-ui/nginx/conf.d/client-ui.conf
+++ b/clients/client-ui/nginx/conf.d/client-ui.conf
@@ -13,6 +13,10 @@ server {
 
     root /app;
 
+    location /sitemap.xml {
+        try_files $uri $uri/ /sitemap.xml = 404;
+    }
+
     location /client.socket.io {
 
         proxy_set_header Upgrade $http_upgrade;
