--- a/nginx/conf.prod.d/client.conf
+++ b/nginx/conf.prod.d/client.conf
@@ -39,6 +39,10 @@ server {
     if ($host ~ '^www\.') { set $https_redirect 1; }
     if ($https_redirect = 1) { return 301 https://osetpr.ru$request_uri; }
 
+    if ($args ~* "_escaped_fragment_=") {
+        rewrite ^ /$uri last;
+    }
+
     location / {
 
         proxy_pass                         http://$webroot;
